--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             type="image/x-icon"
         /> -->
         <link rel="stylesheet" href="/src/sass/main.scss" />
-        <script defer src="/src/js/controller.js"></script>
+        <script defer src="/src/js/controller.js" type="module"></script>
         <title>forkify // Search over 1,000,000 recipes</title>
     </head>
     <body>
@@ -45,15 +45,15 @@
                                         href="src/img/icons.svg#icon-edit"
                                     ></use>
                                 </svg>
-                                <span>Add recipe</span>
+                                <span class="add__recipe">Add recipe</span>
                             </button>
                         </li>
                         <li class="nav__item">
                             <button class="nav__btn nav__btn--bookmarks">
                                 <svg class="nav__icon">
-                                    <!-- <use href="/icons.7a226c28.svg" /> -->
+                                    <use href="src/img/icons.svg#icon-bookmark" />
                                 </svg>
-                                <span>Bookmarks</span>
+                                <span class="check__bookmarks">Bookmarks</span>
                             </button>
                             <div class="bookmarks">
                                 <ul class="bookmarks__list">
