--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             type="image/x-icon"
         /> -->
         <link rel="stylesheet" href="/src/sass/main.scss" />
-        <script defer src="/src/js/controller.js"></script>
+        <script defer src="/src/js/controller.js" type="module"></script>
         <title>forkify // Search over 1,000,000 recipes</title>
     </head>
     <body>
